# wgpu-pingpong-3d

./: Cargo.toml  LibertStatue.mtl
src/: main.rs  obj_reader.rs  shader.frag.glsl  shader.frag.spv  shader.vert.glsl  shader.vert.spv
