[package]
name = "renderer"
version = "0.1.0"
authors = ["Christoph Walcher <christoph-wa@gmx.de>"]
edition = "2018"


[dependencies]
wgpu = "0.5.0"
cgmath = "0.17"
env_logger = "0.7.1"
futures = "0.3"
log = "0.4.8"
png = "0.15"
winit = { version = "0.22.1", features = ["web-sys"] }
bytemuck = "1.2.0"
bmp = "0.5.0"
